Fixed bottom section alignment?

--- a/styles.css
+++ b/styles.css
@@ -337,8 +337,9 @@ button:hover{
 .bottom-section {
     display: flex;
     flex-direction: row;
-    margin-top: 40px;
-    margin-left: 120px;
+    margin-top: 4%;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 .first-section {
